# bubbles

./: Cargo.toml  README.md  out.json
src/: lib.rs  main.rs
src/pull/: datahub.rs  mod.rs
src/scrape/: mod.rs  wikipedia.rs
