[package]
name = "bubbles"
version = "0.1.0"
edition = "2021"

[lib]
name = "bubbles_lib"
path = "src/lib.rs"

[[bin]]
name = "bubbles"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
reqwest = { version = "0.11.22", features = ["blocking"] }
scraper = "0.18.1"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
